@startuml

interface MovementStrategy {
    +{abstract} getMoveSpeed() : float
    +{abstract} getJumpForce() : float
    +{abstract} getMaxHealth() : int
    +{abstract} getGravityScale() : float
}

class ExplorerStrategy {

}

class NinjaStrategy {

}

class TankStrategy {

}

MovementStrategy <|.. ExplorerStrategy
MovementStrategy <|.. NinjaStrategy
MovementStrategy <|.. TankStrategy

interface EnemyState {
    +{abstract} enter(enemy : Enemy*) void
    +{abstract} update(enemy : Enemy*, dt : float) void
    +{abstract} exit(enemy : Enemy*) void
}

class IdleState {

}

class ChaseState {

}

class ReturnState {

}

EnemyState <|.. IdleState
EnemyState <|.. ChaseState
EnemyState <|.. ReturnState

@enduml